# favocon

./: .gitignore  Cargo.toml  README.md
.github/: main.workflow
.github/workflows/: ci.yml  main.yml
src/: icon.rs  main.rs
tests/: cli.rs
