[package]
name = "favocon"
version = "0.1.0"
authors = ["Jake Runzer <jakerunzer@gmail.com>"]
description = "Create favicons from an image"
edition = "2018"

[dependencies]
clap = "2.33.0"
console = "0.7.5"
ico = "0.1.0"
image = "0.21.1"
spinners = "1.0.0"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
