[package]
name = "favocon"
version = "0.1.0"
authors = ["Jake Runzer <jakerunzer@gmail.com>"]
description = "Create favicons from an image"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/coffee-cup/favocon"
repository = "https://github.com/coffee-cup/favocon"
keywords = ["favicon", "icon", "cli", "website", "image"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
clap = "2.33.0"
console = "0.7.5"
ico = "0.1.0"
image = "0.21.1"
spinners = "1.0.0"
tempdir = "0.3.7"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
